--- a/src/styles/user.styl
+++ b/src/styles/user.styl
@@ -7,7 +7,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #00000090;
+    background-color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,7 +29,7 @@
     height:80px;
     width:80px;
     border-radius: 50px;
-    background-color: #17EAD1;
+    background-color: white;
     color: white;
     cursor: pointer;
     font-weight: bold;
@@ -50,7 +50,8 @@
     justify-content: center;
     align-items: center;
     background-color: #17EAD1;
-    position: relative;
+    position: absolute;
+    transition: 0.5s;
 }
 
 .image-box{
@@ -59,6 +60,10 @@
     border: 5px solid black;
     border-radius: 10px;
     overflow: hidden;
+    position: absolute;
+    transition: 0.5s;
+    left: 35%;
+    transform: rotateY(0deg);
 }
 
 .title-part-learn{
@@ -82,23 +87,27 @@
 }
 
 .quiz-box{
-    width: 30%;
-    height: 70%;
+    width: 100%;
+    height: 100%;
     border: 5px solid black;
     border-radius: 10px;
     overflow: hidden;
     background-color: white;
-    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    position: absolute;
+    display: flex;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
 }
 
 .quiz-option{
     display: inline-block;
     width: 100%;
-    padding: 20px 5px 20px 5px;
     text-align: center;
+    border: 2px solid #bbdefb;
+    background-color: #bbdefb;
 }
 
 .quiz-option-group{
@@ -117,6 +126,8 @@
     flex-direction: column;
     padding: 15px 10px;
     width: 55%;
+    transform: scale(0);
+    transition: 0.5s;
 }
 
 .ynd-content{
@@ -173,7 +184,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    color: white;
+    font-weight: bold;
 }
 
 .direct-img{
@@ -183,4 +194,60 @@
     width: 150px;
     height: 150px;
     transform: rotate(45deg);
+}
+
+.home-btn{
+    padding: 10px 10px 10px 10px;
+    background-color: #17EAD1;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.5s;
+    min-width: 60px;
+    display: inline-block;
+}
+
+#quiz-part{
+    transform: scale(0);
+}
+
+.quiz-animate{
+    width: 30%;
+    height: 70%;
+    position: absolute;
+    transition: 0.8s;
+    left: 35%;
+}
+
+.flip-card-container{
+    width: 100%;
+    height: 100%;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-image-box{
+    width: 100%;
+    height: 100%;
+    border: 5px solid black;
+    border-radius: 10px;
+    overflow: hidden;
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.result-dialog{
+    text-align: center;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 15px 10px;
+    width: 55%;
+    transition: 0.5s;
+    position: absolute;
+    transform: scale(0);
 }
