--- a/src/styles/user.styl
+++ b/src/styles/user.styl
@@ -268,3 +268,18 @@
     position: absolute;
     transform: scale(0);
 }
+
+.icon-style{
+    position: absolute;
+    transition: 0.3s;
+    cursor: not-allowed;
+    transform: scale(0);
+}
+
+.true-icon{
+    height: 40%;
+}
+
+.false-icon{
+    height: 40%;
+}
